import enumeracao.*;

public class ArvoreManchester {
  private NoManchester[] vetorArvore;

  public ArvoreManchester(NoManchester[] vetorArvore) {
    this.vetorArvore = vetorArvore;
  }

  private Cor classificarPaciente(int[] sinaisVitais) {
    sinaisVitais[0]
    return Cor;
  }

  private void construirArvoreEstatica() {

  }

  private boolean avaliarNo(NoManchester No, int[] sinaisVitais) {

  }
}
