import enumeracao.*;

public class NoManchester {
  private int id;
  private int indiceAtributo;
  private float valorCorte;
  private Cor corResultado;
  private boolean isFolha;
}
